[gd_scene load_steps=21 format=3 uid="uid://dryu60mtiqv3"]

[ext_resource type="Texture2D" uid="uid://b10j7xa7pso3w" path="res://assets/minigames/caterpillar/graphics/caterpillar_body_idle_1_0000.png" id="1_2884l"]
[ext_resource type="Script" uid="uid://ynqc2tqeuqt3" path="res://sources/minigames/caterpillar/caterpillar_body.gd" id="1_vvkkg"]
[ext_resource type="Texture2D" uid="uid://kkavneaje7ra" path="res://assets/minigames/caterpillar/graphics/caterpillar_body_idle_1_0001.png" id="2_r8mkw"]
[ext_resource type="Texture2D" uid="uid://ddsgq1gatqu0f" path="res://assets/minigames/caterpillar/graphics/caterpillar_body_idle_1_0002.png" id="3_iyvc5"]
[ext_resource type="Texture2D" uid="uid://bdkcewub7o4bs" path="res://assets/minigames/caterpillar/graphics/caterpillar_body_idle_1_0003.png" id="4_ejyrg"]
[ext_resource type="Texture2D" uid="uid://c36k5xax8ycw8" path="res://assets/minigames/caterpillar/graphics/caterpillar_body_idle_1_0004.png" id="5_wiekb"]
[ext_resource type="Texture2D" uid="uid://cypc4gngcxkl2" path="res://assets/minigames/caterpillar/graphics/caterpillar_body_idle_1_0005.png" id="6_8ul1u"]
[ext_resource type="Texture2D" uid="uid://dnfw1mfbyxr5" path="res://assets/minigames/caterpillar/graphics/caterpillar_body_walk_0001.png" id="7_g82q5"]
[ext_resource type="Texture2D" uid="uid://dpvakr5hu5vpl" path="res://assets/minigames/caterpillar/graphics/caterpillar_body_walk_0002.png" id="8_bhhph"]
[ext_resource type="Texture2D" uid="uid://b2n60a44wnc3l" path="res://assets/minigames/caterpillar/graphics/caterpillar_body_walk_0003.png" id="9_ybl87"]
[ext_resource type="Texture2D" uid="uid://ciyvvrebsilsc" path="res://assets/minigames/caterpillar/graphics/caterpillar_body_walk_0004.png" id="10_yck3v"]
[ext_resource type="Texture2D" uid="uid://dglxepw3sraye" path="res://assets/minigames/caterpillar/graphics/caterpillar_body_walk_0005.png" id="11_tnnjk"]
[ext_resource type="Texture2D" uid="uid://hwk6152g66qr" path="res://assets/minigames/caterpillar/graphics/caterpillar_body_walk_0007.png" id="12_wkhrj"]
[ext_resource type="PackedScene" uid="uid://cn2rw06pltyiu" path="res://sources/utils/fx/right.tscn" id="14_cyw4o"]
[ext_resource type="Texture2D" uid="uid://dkc630ptqucrp" path="res://assets/minigames/caterpillar/graphics/caterpillar_body_left.png" id="15_2xyl2"]
[ext_resource type="LabelSettings" uid="uid://bguqnhiblwick" path="res://resources/themes/minigames_label_settings.tres" id="15_7eh5m"]
[ext_resource type="Texture2D" uid="uid://bxqxl2iflusat" path="res://assets/minigames/caterpillar/graphics/caterpillar_body_center.png" id="16_8jigi"]
[ext_resource type="Texture2D" uid="uid://df6l2panyr65v" path="res://assets/minigames/caterpillar/graphics/caterpillar_body_right.png" id="17_rhhiw"]
[ext_resource type="FontFile" uid="uid://bw8cb4e0a7ayj" path="res://assets/fonts/kalulu_mulish_regular.otf" id="18_8jigi"]

[sub_resource type="SpriteFrames" id="SpriteFrames_236fx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_2884l")
}, {
"duration": 1.0,
"texture": ExtResource("2_r8mkw")
}, {
"duration": 1.0,
"texture": ExtResource("3_iyvc5")
}, {
"duration": 1.0,
"texture": ExtResource("4_ejyrg")
}, {
"duration": 1.0,
"texture": ExtResource("5_wiekb")
}, {
"duration": 1.0,
"texture": ExtResource("6_8ul1u")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_g82q5")
}, {
"duration": 1.0,
"texture": ExtResource("8_bhhph")
}, {
"duration": 1.0,
"texture": ExtResource("9_ybl87")
}, {
"duration": 1.0,
"texture": ExtResource("10_yck3v")
}, {
"duration": 1.0,
"texture": ExtResource("11_tnnjk")
}, {
"duration": 1.0,
"texture": ExtResource("12_wkhrj")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}]

[node name="CaterpillarBody" type="Node2D"]
script = ExtResource("1_vvkkg")

[node name="RightFX" parent="." instance=ExtResource("14_cyw4o")]
offset_left = 64.0
offset_top = -128.0
offset_right = 64.0
offset_bottom = -128.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, 16)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_236fx")
animation = &"idle"
offset = Vector2(32, -64)

[node name="Sprite2D_Body_Left" type="Sprite2D" parent="."]
texture = ExtResource("15_2xyl2")
centered = false

[node name="TextureRect_Body_Center" type="TextureRect" parent="."]
offset_right = 9.0
offset_bottom = 114.0
texture = ExtResource("16_8jigi")
stretch_mode = 1

[node name="Sprite2D_Body_Right" type="Sprite2D" parent="."]
texture = ExtResource("17_rhhiw")
centered = false

[node name="Label" type="Label" parent="."]
offset_right = 163.0
offset_bottom = 121.0
theme_override_fonts/font = ExtResource("18_8jigi")
text = "abc"
label_settings = ExtResource("15_7eh5m")
